--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div
+      class="container mx-auto h-screen bg-gradient-to-br from-gray-400 to-orange-100 p-2"
+    >
+      <div id="root"></div>
+      <script type="module" src="/src/main.jsx"></script>
+    </div>
   </body>
 </html>
