--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div
-      class="container mx-auto h-screen bg-gradient-to-br from-gray-400 to-orange-100 p-2"
+      class="container mx-auto h-full bg-gradient-to-br from-gray-400 to-orange-100 p-2"
     >
       <div id="root"></div>
       <script type="module" src="/src/main.jsx"></script>
